--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -137,8 +137,8 @@ img {
   position: relative;
   margin: 0 auto;
   max-width: 739px;
-  padding: 5px;
-  margin: 10px 0 10px 0;
+  /* padding: 5px; */
+  /* margin: 10px 0 10px 0; */
   border: 1px solid #ebebeb;
 
   box-shadow: 0 0 5px #ebebeb;
